// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accounts should return filtered accounts along with their permissions 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "nodes": Array [
      Object {
        "__typename": "Account",
        "address": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "createdBlockId": "84",
        "datetime": "2022-11-08T19:00:58.501",
        "eventId": "DidCreated",
        "id": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "identity": Object {
          "__typename": "Identity",
          "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
          "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
          "secondaryKeysFrozen": false,
        },
        "identityId": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "permissions": Object {
          "__typename": "Permission",
          "assets": null,
          "portfolios": null,
          "transactionGroups": Array [],
          "transactions": null,
        },
        "permissionsId": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
      },
      Object {
        "__typename": "Account",
        "address": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
        "createdBlockId": "92",
        "datetime": "2022-11-08T19:01:02.5",
        "eventId": "SecondaryKeysAdded",
        "id": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
        "identity": Object {
          "__typename": "Identity",
          "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
          "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
          "secondaryKeysFrozen": false,
        },
        "identityId": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "permissions": Object {
          "__typename": "Permission",
          "assets": Object {
            "type": "these",
            "values": Array [],
          },
          "portfolios": Object {
            "type": "these",
            "values": Array [],
          },
          "transactionGroups": Array [],
          "transactions": Object {
            "type": "these",
            "values": Array [],
          },
        },
        "permissionsId": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
      },
    ],
  },
}
`;

exports[`accounts should return first 10 accounts as there are no filters 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "nodes": Array [
      Object {
        "__typename": "Account",
        "address": "5C7abMfbhWZGrzfnTeS7sTnY9bm7Ec8c1FBAkRdjw8iT41ZD",
        "createdBlockId": "155",
        "datetime": "2022-11-08T19:01:34",
        "eventId": "DidCreated",
        "identityId": "0x5c7834d42ff31e9df992016d5983301d8376494a61d464c66fd03bb4b02471e0",
        "permissionsId": "5C7abMfbhWZGrzfnTeS7sTnY9bm7Ec8c1FBAkRdjw8iT41ZD",
      },
      Object {
        "__typename": "Account",
        "address": "5CDKC4cEo9gTRnBNZo4fpDS6ov1pcmngmf6QhNf9HzfBKPk3",
        "createdBlockId": "120",
        "datetime": "2022-11-08T19:01:16.5",
        "eventId": "DidCreated",
        "identityId": "0x38203f78dca37af2d3285f080a16197c0d69a4054ebf592d5900edb5c5f46e94",
        "permissionsId": "5CDKC4cEo9gTRnBNZo4fpDS6ov1pcmngmf6QhNf9HzfBKPk3",
      },
      Object {
        "__typename": "Account",
        "address": "5CGTLF38iqat5h8UmDYNyTDu4PD6bUuqJ5LjWJQYwzQayeX3",
        "createdBlockId": "122",
        "datetime": "2022-11-08T19:01:17.501",
        "eventId": "DidCreated",
        "identityId": "0xe720d71292cd929aede2730cb25601eb206bffc07147a58167763797bf1ef38a",
        "permissionsId": "5CGTLF38iqat5h8UmDYNyTDu4PD6bUuqJ5LjWJQYwzQayeX3",
      },
      Object {
        "__typename": "Account",
        "address": "5CM8cBoq3rqSDm8SUMmVsf9gZUtHYb984JAf4eKYmUtAiMhP",
        "createdBlockId": "97",
        "datetime": "2022-11-08T19:01:05.001",
        "eventId": "DidCreated",
        "identityId": "0xa9755a2d863adf7981d60f816884783bb2b71788efdfae845fc2830c36500551",
        "permissionsId": "5CM8cBoq3rqSDm8SUMmVsf9gZUtHYb984JAf4eKYmUtAiMhP",
      },
      Object {
        "__typename": "Account",
        "address": "5CRvGY4utGxbmrS5uoxUkrfgyC38L48pixh6dVhpwLznsLZe",
        "createdBlockId": "146",
        "datetime": "2022-11-08T19:01:29.5",
        "eventId": "DidCreated",
        "identityId": "0xd590be1d489e49d7a796126fb8ffb7a7288d8adae3e384d9d9932145a0d7145a",
        "permissionsId": "5CRvGY4utGxbmrS5uoxUkrfgyC38L48pixh6dVhpwLznsLZe",
      },
      Object {
        "__typename": "Account",
        "address": "5CXYpJxGyMKcJX7qjVXjJcA8w9UbsonRcLn32h6riHtMEB1b",
        "createdBlockId": "198",
        "datetime": "2022-11-08T19:01:56.5",
        "eventId": "DidCreated",
        "identityId": "0xedd49e576a031a5240a3707849bf862b40279e485fb789bb0298b5372624a098",
        "permissionsId": "5CXYpJxGyMKcJX7qjVXjJcA8w9UbsonRcLn32h6riHtMEB1b",
      },
      Object {
        "__typename": "Account",
        "address": "5CaWrWYw133scCHRLGBkQv9ssdFFnanPSZhQHmo8ARMeK79Z",
        "createdBlockId": "335",
        "datetime": "2022-11-08T19:03:05.001",
        "eventId": "DidCreated",
        "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
        "permissionsId": "5CaWrWYw133scCHRLGBkQv9ssdFFnanPSZhQHmo8ARMeK79Z",
      },
      Object {
        "__typename": "Account",
        "address": "5CkwnyhRgn6BuEiYx6jurDDvT6c4MtVnEtDfQbTWAUxbL7Sm",
        "createdBlockId": "130",
        "datetime": "2022-11-08T19:01:21.5",
        "eventId": "DidCreated",
        "identityId": "0xd3d03cc50d1a6781f211bbf189e521471f1e339da666743d71df16317ce471ae",
        "permissionsId": "5CkwnyhRgn6BuEiYx6jurDDvT6c4MtVnEtDfQbTWAUxbL7Sm",
      },
      Object {
        "__typename": "Account",
        "address": "5CrMp8ekpRUDBu1Ytyuqs22B6zXMpH7L2Drh5kALckYD34Ca",
        "createdBlockId": "44",
        "datetime": "2022-11-08T19:00:38.5",
        "eventId": "DidCreated",
        "identityId": "0x5f558e6ef3e91fc8235133b365124be53cdee3fc6daf0a24caca1887cb39f4bf",
        "permissionsId": "5CrMp8ekpRUDBu1Ytyuqs22B6zXMpH7L2Drh5kALckYD34Ca",
      },
      Object {
        "__typename": "Account",
        "address": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "createdBlockId": "84",
        "datetime": "2022-11-08T19:00:58.501",
        "eventId": "DidCreated",
        "identityId": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "permissionsId": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
      },
    ],
    "totalCount": 48,
  },
}
`;

exports[`accounts should return just total count 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "totalCount": 48,
  },
}
`;

exports[`identities should return identity details along with accounts and their permissions 1`] = `
Object {
  "identities": Object {
    "__typename": "IdentitiesConnection",
    "nodes": Array [
      Object {
        "__typename": "Identity",
        "createdBlockId": "84",
        "datetime": "2022-11-08T19:00:58.501",
        "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "eventId": "DidCreated",
        "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "secondaryAccounts": Object {
          "__typename": "AccountsConnection",
          "nodes": Array [
            Object {
              "__typename": "Account",
              "address": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
              "createdBlockId": "84",
              "eventId": "DidCreated",
              "permissions": Object {
                "__typename": "Permission",
                "assets": null,
                "createdBlockId": "84",
                "datetime": "2022-11-08T19:00:58.501",
                "portfolios": null,
                "transactionGroups": Array [],
                "transactions": null,
                "updatedBlockId": "84",
              },
            },
            Object {
              "__typename": "Account",
              "address": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
              "createdBlockId": "92",
              "eventId": "SecondaryKeysAdded",
              "permissions": Object {
                "__typename": "Permission",
                "assets": Object {
                  "type": "these",
                  "values": Array [],
                },
                "createdBlockId": "92",
                "datetime": "2022-11-08T19:01:02.5",
                "portfolios": Object {
                  "type": "these",
                  "values": Array [],
                },
                "transactionGroups": Array [],
                "transactions": Object {
                  "type": "these",
                  "values": Array [],
                },
                "updatedBlockId": "92",
              },
            },
          ],
        },
        "secondaryKeysFrozen": false,
        "updatedBlockId": "84",
      },
    ],
  },
}
`;

exports[`permissions should return permissions for a given account address 1`] = `
Object {
  "permissions": Object {
    "__typename": "PermissionsConnection",
    "nodes": Array [
      Object {
        "__typename": "Permission",
        "assets": Object {
          "type": "these",
          "values": Array [],
        },
        "createdBlockId": "311",
        "datetime": "2022-11-08T19:02:53.001",
        "id": "5EYxLuFdbD99jn2BsZ3f1rMoa3raDB8TAnTLX3VMXhQoJyrv",
        "portfolios": Object {
          "type": "these",
          "values": Array [],
        },
        "transactionGroups": Array [],
        "transactions": Object {
          "type": "these",
          "values": Array [],
        },
        "updatedBlockId": "311",
      },
    ],
  },
}
`;
